syntax = "proto3";
package customer.auditing.service;

option java_multiple_files = true;
option java_package = "au.com.nab.icommerce.customer.auditing.protobuf";
option java_outer_classname = "CustomerAuditingServiceDomain";

message PCustomerActivity {
  string id = 1;
  int32 customerId = 2;
  string action = 3;
  string method = 4;
  string requestURI = 5;
  string queryString = 6;
  int64 dateTime = 7;
  string body = 8;
  string response = 9;
}

message PCustomerActivitiesRequest {
  repeated PCustomerActivity customerActivities = 1;
}

message PCustomerActivitiesResponse {
  int32 code = 1;
  repeated PCustomerActivity data = 2;
}